--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <canvas id="canvas"></canvas>
         
     <script src="js/lib/three.min.js"></script>
+    <script src="js/lib/dat.gui.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
